--- a/app/assets/stylesheets/groups.css
+++ b/app/assets/stylesheets/groups.css
@@ -1,6 +1,6 @@
 .none{}
 
-.group{
+table.pretty .group{
     width: 8px;
     height: 100%;
     padding:  0;
