--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -13,7 +13,7 @@
 		text-decoration: none;
 		font-family: "Kozuka Gothic Pro","Myriad Pro","Estrangelo Edessa", "Arial", sans-serif;
 		font-size: 12pt;
-		line-height: 18pt;
+
         color: #000000;
 		border-style: none;
 		border-width: 0;
